# simpleautogui

./: .buildinfo  .gitignore  LICENSE  README.html  README.md  README.ru.md  changelog.html  contact.html  examples.html  faq.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  req.txt  requirements.txt  search.html  simpleautogui.base.classes.base.html  simpleautogui.base.classes.html  simpleautogui.base.classes.notify.html  simpleautogui.base.html  simpleautogui.html  simpleautogui.screen.html  simpleautogui.screen.utils.colors.html  simpleautogui.screen.utils.html  simpleautogui.screen.utils.images.html  simpleautogui.screen.utils.proximity.html  simpleautogui.win.html  simpleautogui.win.windows.html
.github/workflows/: ci.yml
.run/: build.run.xml  major.run.xml  minor.run.xml  patch.run.xml  release dry-run.run.xml  ruff --fix.run.xml  test.run.xml  twine check.run.xml
_modules/: index.html
_modules/simpleautogui/base/classes/: base.html  notify.html
_modules/simpleautogui/screen/utils/: colors.html  images.html  proximity.html
_modules/simpleautogui/win/: windows.html
_sources/: README.rst.txt  changelog.rst.txt  contact.rst.txt  examples.rst.txt  faq.rst.txt  index.rst.txt  modules.rst.txt  quickstart.rst.txt  simpleautogui.base.classes.base.rst.txt  simpleautogui.base.classes.notify.rst.txt  simpleautogui.base.classes.rst.txt  simpleautogui.base.rst.txt  simpleautogui.rst.txt  simpleautogui.screen.rst.txt  simpleautogui.screen.utils.colors.rst.txt  simpleautogui.screen.utils.images.rst.txt  simpleautogui.screen.utils.proximity.rst.txt  simpleautogui.screen.utils.rst.txt  simpleautogui.win.rst.txt  simpleautogui.win.windows.rst.txt
_static/: documentation_options.js
_static/css/: custom.css  custom.sass
_static/js/: custom.js
examples/: point.py  region.py  wait_color.py  wait_image.py
scripts/: release.py
src/docs/: guide
src/docs/source/: conf.py  contact.rst  contributing.rst  faq.rst  index.rst  modules.rst  quickstart.rst  simpleautogui.base.classes.base.rst  simpleautogui.base.classes.rst  simpleautogui.base.rst  simpleautogui.screen.rst  simpleautogui.screen.utils.colors.rst  simpleautogui.screen.utils.rst  simpleautogui.win.rst  simpleautogui.windows.rst  userguide.rst
src/docs/source/_static/css/: custom.css  custom.sass
src/simpleautogui/: __init__.py  macro.py  notify.py
src/simpleautogui/base/: __init__.py
src/simpleautogui/base/classes/: base.py  notify.py
src/simpleautogui/screen/: __init__.py  common.py  utils.py
src/simpleautogui/screen/classes/: __init__.py  base.py  common.py
src/simpleautogui/screen/utils/: colors.py  images.py  proximity.py
src/simpleautogui/win/: common.py
src/simpleautogui/win/console/: base.py
src/simpleautogui/win/windows/: __init__.py  classes.py
src/simpleautogui/win/windows/exceptions/: base.py
src/simpleautogui/windows/: common.py
tests/: test_macro.py  test_screen.py  test_windows.py
tests/screen_tests/: common_tests.py
tests/windows_tests/: common_tests.py
