[project]
name = "simpleautogui"
version = "0.0.3"
authors = [
  { name = "artasov", email = "ivanhvalevskey@gmail.com" }
]
description = "A wrapper around pyautogui that will make some automation processes easier."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "PyAutoGUI >= 0.9.54",
  "opencv-python >= 4.9.0.80",
  "pywin32 >= 306"
]

[project.urls]
Homepage = "https://github.com/Artasov/simpleautogui"
Issues = "https://github.com/Artasov/simpleautogui/issues"

[tool.poetry.scripts]
simple-auto-gui = "simpleautogui:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
