[project]
name = "simpleautogui"
version = "0.0.4"
authors = [
    { name = "artasov", email = "ivanhvalevskey@gmail.com" }
]
description = "A wrapper around pyautogui that will make some automation processes easier."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Windows",
]
dependencies = [
    "PyAutoGUI >= 0.9.54",
    "opencv-python >= 4.9.0.80",
    "pywin32 >= 306",
    "pytesseract >= 0.3.10",
    "mouse >= 0.7.1",
    "webcolors >= 1.13",
    "keyboard >= 0.13.5",
]

[project.urls]
Homepage = "https://github.com/Artasov/simpleautogui"
Issues = "https://github.com/Artasov/simpleautogui/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
